update workflow.yml